apps/mautrix/linkedin/overlays/nishir-tailnet/httproute-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: linkedin-redirect
spec:
  hostnames:
      - linkedin.i.shikanime.studio
  parentRefs:
    - name: linkedin
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
