apps/mautrix/linkedin/overlays/nishir-tailnet/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: linkedin
spec:
  hostnames:
    - linkedin.i.shikanime.studio
  parentRefs:
    - name: linkedin
      sectionName: https
  rules:
    - backendRefs:
        - name: mautrix-linkedin
          port: http
