apps/mautrix/linkedin/overlays/nishir-tailnet/patch-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: linkedin
spec:
  hostnames:
    - linkedin.i.shikanime.studio
    - linkedin.taila659a.ts.net
  parentRefs:
    - name: linkedin
      sectionName: https
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: linkedin-redirect
spec:
  hostnames:
    - linkedin.i.shikanime.studio
    - linkedin.taila659a.ts.net
  parentRefs:
    - name: linkedin
      sectionName: http
