apps/mautrix/linkedin/overlays/nishir-tailnet/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mautrix-linkedin-tailscale
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: tailscale-system
      ports:
        - port: http
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: mautrix-linkedin
      app.kubernetes.io/name: mautrix-linkedin
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mautrix-linkedin-vmagent
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: flux-system
          podSelector:
            matchLabels:
              app.kubernetes.io/instance: victoriametrics
              app.kubernetes.io/component: vmagent
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: mautrix-linkedin
  policyTypes:
    - Ingress
